# matcha

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
tests/: torrentjuju_test.rs  torrentlee_test.rs  torrentsir_test.rs
tests/html/torrentjuju/: bbs.html  magnet.html  magnet_try.html
tests/html/torrentlee/: bbs.html  magnet.html
tests/html/torrentsir/: bbs.html  magnet.html
