[package]
name = "matcha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = "0.11"
select = "0.5.0"
prettytable-rs = "^0.8"
clap = "3.1.5"
urlencoding = "2.1.0"